[tool.poetry]
name = "audio-example"
version = "0.1.0"
description = ""
authors = ["anselbrandt <ansel@anselbrandt.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.1.3"
numpy = "^1.26.2"
matplotlib = "^3.8.2"
seaborn = "^0.13.0"
librosa = "^0.10.1"
ipython = "^8.18.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.27.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
